[package]
name = "spin-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[workspace.package]
version = "2.1.0-pre0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://developer.fermyon.com/spin"
repository = "https://github.com/fermyon/spin"
rust-version = "1.71"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bytes = "1.1"
chrono = "0.4"
clap = { version = "3.2.24", features = ["derive", "env"] }
clearscreen = "2.0.1"
command-group = "2.1"
comfy-table = "5.0"
ctrlc = { version = "3.2", features = ["termination"] }
dialoguer = "0.10"
dirs = "4.0"
dunce = "1.0"
futures = "0.3"
glob = "0.3.1"
indicatif = "0.17.3"
is-terminal = "0.4"
itertools = "0.11.0"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
nix = { version = "0.24", features = ["signal"] }
outbound-http = { path = "crates/outbound-http" }
outbound-redis = { path = "crates/outbound-redis" }
spin-key-value = { path = "crates/key-value" }
spin-key-value-sqlite = { path = "crates/key-value-sqlite" }
path-absolutize = "3.0.11"
rand = "0.8"
regex = "1.5.5"
reqwest = { workspace = true }
rpassword = "7.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
terminal = { path = "crates/terminal" }
spin-app = { path = "crates/app" }
spin-build = { path = "crates/build" }
spin-common = { path = "crates/common" }
spin-doctor = { path = "crates/doctor" }
spin-http = { path = "crates/http" }
spin-loader = { path = "crates/loader" }
spin-locked-app = { path = "crates/locked-app" }
spin-manifest = { path = "crates/manifest" }
spin-oci = { path = "crates/oci" }
spin-plugins = { path = "crates/plugins" }
spin-redis-engine = { path = "crates/redis" }
spin-templates = { path = "crates/templates" }
spin-trigger = { path = "crates/trigger" }
spin-trigger-http = { path = "crates/trigger-http" }
spin-variables = { path = "crates/variables" }

tempfile = "3.8.0"
tokio = { version = "1.23", features = ["full"] }
toml = "0.6"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "^1.0", features = ["v4"] }
wasmtime = { workspace = true }
watchexec = { git = "https://github.com/watchexec/watchexec.git", rev = "8e91d26ef6400c1e60b32a8314cbb144fa33f288" }
watchexec-filterer-globset = { git = "https://github.com/watchexec/watchexec.git", rev = "8e91d26ef6400c1e60b32a8314cbb144fa33f288" }
subprocess = "0.2.9"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
hex = "0.4.3"
hyper = { workspace = true }
sha2 = "0.10.1"
which = "4.2.5"
e2e-testing = { path = "crates/e2e-testing" }
http-body-util = { workspace = true }
runtime-tests = { path = "tests/runtime-tests" }

[build-dependencies]
cargo-target-dep = { git = "https://github.com/fermyon/cargo-target-dep", rev = "482f269eceb7b1a7e8fc618bf8c082dd24979cf1" }
vergen = { version = "^8.2.1", default-features = false, features = [
  "build",
  "git",
  "gitcl",
  "cargo",
] }
wit-component = "0.19.0"

[features]
default = ["llm"]
all-tests = ["e2e-tests", "config-provider-tests"]
config-provider-tests = []
e2e-tests = []
llm = ["spin-trigger-http/llm"]
llm-metal = ["llm", "spin-trigger-http/llm-metal"]
llm-cublas = ["llm", "spin-trigger-http/llm-cublas"]

[workspace]
members = ["crates/*", "sdk/rust", "sdk/rust/macro", "tests/runtime-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
http-body-util = "=0.1.0-rc.2"
hyper = { version = "=1.0.0-rc.3", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
tracing = { version = "0.1", features = ["log"] }

wasi-common-preview1 = { version = "15.0.0", package = "wasi-common" }
wasmtime = { version = "15.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "15.0.0", features = ["tokio"] }
wasmtime-wasi-http = "15.0.0"

spin-componentize = { git = "https://github.com/fermyon/spin-componentize", rev = "191789170abde10cd55590466c0660dd6c7d472a" }

[[bin]]
name = "spin"
path = "src/bin/spin.rs"
