[package]
name = "spin-abi-conformance"
version = "0.5.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.82"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
wasmtime = "0.39.1"
wasmtime-wasi = "0.39.1"
wasi-common = "0.39.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
tempfile = "3.3.0"
cap-std = "0.25.2"
toml = "0.5.9"
