[package]
name = "spin-abi-conformance"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.44"
cap-std = "0.26.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.82"
tempfile = "3.3.0"
toml = "0.5.9"
wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-bindgen-wasmtime = { workspace = true }
