[package]
name = "spin-bindle"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
bindle = { workspace = true }
dirs = "4.0"
dunce = "1.0"
futures = "0.3.14"
itertools = "0.10.3"
lazy_static = "1.4.0"
mime_guess = { version = "2.0" }
regex = "1.5.4"
reqwest = "0.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-app = { path = "../app" }
spin-loader = { path = "../loader" }
spin-manifest = { path = "../manifest" }
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.20", features = ["full"] }
tracing = { workspace = true }
toml = "0.5"
walkdir = "2.3.2"
