[package]
name = "spin-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt", "time"] }
url = { workspace = true }
