[package]
name = "spin-componentize"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
wasm-encoder = "0.200.0"
wasm-metadata = "0.200.0"
wasmparser = "0.200.0"
wit-component = "0.200.0"
wit-parser = "0.200.0"

[dev-dependencies]
async-trait = { workspace = true }
cap-std = "2.0"
rand = { workspace = true }
rand_chacha = "0.3"
rand_core = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "fs"] }
toml = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wat = "1"
