[package]
name = "spin-compose"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
indexmap = "2.2.6"
semver = "1"
spin-app = { path = "../app" }
spin-componentize = { workspace = true }
spin-serde = { path = "../serde" }
thiserror = "1"
tokio = { version = "1.23", features = ["fs"] }
wac-graph = "0.5.0"

[lints]
workspace = true
