[package]
name = "spin-compose"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = "2.2.6"
semver = "1"
spin-app = { path = "../app" }
spin-componentize = { workspace = true }
spin-serde = { path = "../serde" }
thiserror = { workspace = true }
tokio = { version = "1.23", features = ["fs"] }
wac-graph = "0.5.0"

[lints]
workspace = true
