[package]
name = "spin-config"
version = "0.2.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
spin-engine = { path = "../engine" }
spin-manifest = { path = "../manifest" }
thiserror = "1"

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"
features = ["async"]

[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread" ] }
toml = "0.5"
