[package]
name = "spin-config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
once_cell = "1"
spin-app = { path = "../app" }
spin-core = { path = "../core" }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
vaultrs = "0.6.2"
serde = "1.0.145"
wit-bindgen-wasmtime = { workspace = true }

[dev-dependencies]
toml = "0.5"
