[package]
name = "spin-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
serde_json = "1"
spin-componentize = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-factors-test = { path = "../factors-test" }
spin-locked-app = { path = "../locked-app" }
wasmtime-wasi = { workspace = true }