[package]
name = "spin-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
serde_json = "1"
spin-componentize = { workspace = true }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-factors-test = { path = "../factors-test" }
spin-locked-app = { path = "../locked-app" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
wasmtime-wasi = { workspace = true }
