[package]
name = "spin-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
spin-componentize = { workspace = true }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-factors-test = { path = "../factors-test" }
spin-locked-app = { path = "../locked-app" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wasmtime-wasi = { workspace = true }

[features]
# Enables support for the `wasmtime::Store::call_hook` API which enables injecting custom
# logic around all entries/exits from WebAssembly. This has a slight performance
# cost for all host functions.
call-hook = ["wasmtime/call-hook"]
