[package]
name = "spin-doctor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
similar = "2"
spin-app = { path = "../app" }
spin-config = { path = "../config" }
spin-loader = { path = "../loader" }
tempfile = "3.3.0"
terminal = { path = "../terminal" }
tokio = "1"
toml = "0.7"
toml_edit = "0.19"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
