[package]
name = "spin-doctor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
serde = { workspace = true }
similar = "2"
spin-common = { path = "../common" }
spin-manifest = { path = "../manifest" }
tempfile = { workspace = true }
terminal = { path = "../terminal" }
tokio = { workspace = true, features = ["process"] }
toml = { workspace = true }
toml_edit = { version = "0.22", features = ["serde"] }
tracing = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
ui-testing = { path = "../ui-testing" }

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false
