[package]
name = "e2e-testing"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.11", features = [ "full" ] }
hyper = { version = "0.14", features = [ "full" ] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking"] }
nix = "0.26.1"
url = "2.2.2"
lockfile = "0.4.0"
waitfor = "0.1.0"