[package]
name = "spin-engine"
version = "0.2.0"
edition = "2021"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
dirs = "4.0"
sanitize-filename = "0.3.0"
spin-manifest = { path = "../manifest" }
tempfile = "3.3.0"
tokio = { version = "1.10.0", features = [ "full" ] }
tracing = { version = "0.1", features = [ "log" ] }
tracing-futures = "0.2"
wasi-cap-std-sync = "0.39.1"
wasi-common = "0.39.1"
wasmtime = { version = "0.39.1", features = [ "async" ] }
wasmtime-wasi = "0.39.1"
cap-std = "0.24.1"

[dev-dependencies.wit-bindgen-wasmtime]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"
features = [ "async" ]
