[package]
name = "spin-environments"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
indexmap = "2.2.6"
miette = "7.2.0"
oci-distribution = { git = "https://github.com/fermyon/oci-distribution", rev = "7e4ce9be9bcd22e78a28f06204931f10c44402ba" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-common = { path = "../common" }
spin-componentize = { path = "../componentize" }
spin-compose = { path = "../compose" }
spin-loader = { path = "../loader" }
spin-manifest = { path = "../manifest" }
spin-serde = { path = "../serde" }
tokio = { version = "1.23", features = ["fs"] }
tracing = { workspace = true }
wac-parser = "0.6.0"
wac-resolver = "0.6.0"
wac-types = "0.6.0"
wasm-pkg-loader = "0.4.1"

[lints]
workspace = true
