[package]
name = "spin-expressions"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
once_cell = "1"
spin-locked-app = { path = "../locked-app" }
thiserror = "1"
serde = "1.0.188"

[dev-dependencies]
toml = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
