[package]
name = "spin-factor-key-value-redis"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["rc"] }
spin-factor-key-value = { path = "../factor-key-value" }
# TODO: merge with this crate
spin-key-value-redis = { path = "../key-value-redis" }

[lints]
workspace = true
