[package]
name = "spin-factor-key-value"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lru = "0.12"
serde = { workspace = true }
spin-core = { path = "../core" }
spin-factors = { path = "../factors" }
spin-locked-app = { path = "../locked-app" }
spin-world = { path = "../world" }
table = { path = "../table" }
tokio = { version = "1", features = ["macros", "sync", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
spin-factors-test = { path = "../factors-test" }
spin-key-value-spin = { path = "../key-value-spin" }
spin-key-value-redis = { path = "../key-value-redis" }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }


[lints]
workspace = true
