[package]
name = "spin-factor-key-value"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
lru = "0.9.0"
serde = { version = "1.0", features = ["rc"] }
spin-core = { path = "../core" }
spin-factors = { path = "../factors" }
spin-locked-app = { path = "../locked-app" }
spin-world = { path = "../world" }
table = { path = "../table" }
tokio = { version = "1", features = ["macros", "sync", "rt"] }
toml = "0.8"
tracing = { workspace = true }

[dev-dependencies]
spin-factors-test = { path = "../factors-test" }
spin-key-value-spin = { path = "../key-value-spin" }
spin-key-value-redis = { path = "../key-value-redis" }
tempfile = "3.12.0"
tokio = { version = "1", features = ["macros", "rt"] }


[lints]
workspace = true
